# ans104-indexer

./: Cargo.toml  README.md  algo  here.txt
src/: cli.rs  errors.rs  indexer.rs  lib.rs  main.rs  tags.rs
src/client/: http.rs  mod.rs
src/indexer/: indexer_default.rs  mod.rs
src/storage/: fs.rs  mod.rs
src/transaction/: bundle.rs  mod.rs  tags.rs
tests/fixtures/: A-YBEklQRlMtSGFzaHZiYWZrcmVpY3FwNHh6aXUybW11b3hjbWoyNXEydHduYXVlZHdnZGVtZHF4M2Z4cHlsNHpodzJ6YXRnbRhDb250ZW50LVR5cGU-YXBwbGljYXRpb24vanNvbjsgY2hhcnNldD11dGYtOAA  A-YBEklQRlMtSGFzaHZiYWZrcmVpYTNzZW9qM3E2dnIzeWZ0b2Fqc3RqMnBnaW1kNXRha3l6ZTQyNDZjeTdqM2d6a3g3c3ZkbRhDb250ZW50LVR5cGU-YXBwbGljYXRpb24vanNvbjsgY2hhcnNldD11dGYtOAA  A-YBEklQRlMtSGFzaHZiYWZrcmVpYTQ3Y2FoMm41N3N6Mjc2b3J0aDZtdDJlcm1oa3RmNHhjZmhmeDV3NmZpNHp3cmt5Nm9rNBhDb250ZW50LVR5cGU-YXBwbGljYXRpb24vanNvbjsgY2hhcnNldD11dGYtOAA  A-YBEklQRlMtSGFzaHZiYWZrcmVpYW1pcmdnbndnZjJzYWg0NHc0Z3kyNGZxYzV1dWhmZWUyZWY3Y2lyYmF6bmtmdnRwNXJpNBhDb250ZW50LVR5cGU-YXBwbGljYXRpb24vanNvbjsgY2hhcnNldD11dGYtOAA  A-YBEklQRlMtSGFzaHZiYWZrcmVpYWNxcXNnY2o0Nnh2bWE3YmhzaWQ1cGFnaG15Z3ByMjd1bnZ4bHoybHNzcDV4cXFqYjVzZRhDb250ZW50LVR5cGU-YXBwbGljYXRpb24vanNvbjsgY2hhcnNldD11dGYtOAA  A-YBEklQRlMtSGFzaHZiYWZrcmVpYWVjZjZ4dWF1ZG5jdHV2aGVqaW9oY2M2amt0b2xzY2Fka25zeHdhNGU1YnA0d3RyNWJwdRhDb250ZW50LVR5cGU-YXBwbGljYXRpb24vanNvbjsgY2hhcnNldD11dGYtOAA  A-YBEklQRlMtSGFzaHZiYWZrcmVpYWY1N25xejVzeW9ldHRpc29pNWxzZGQzM3JrMjVwdDJrb3N1bW15N21tMmIzanZycWZweRhDb250ZW50LVR5cGU-YXBwbGljYXRpb24vanNvbjsgY2hhcnNldD11dGYtOAA  (+66 more)
